@@ -9,6 +9,6 @@ public class BaseTest {
     @BeforeMethod
     public void beforeMethod(Method m){
         System.out.println("STARTING TEST: " + m.getName());
-        System.out.println("THREAD ID: " + Thread.currentThread().getId());
+        System.out.println("THREAD ID: " + Thread.currentThread().threadId());
     }
 }
